src/test/01-Basic/209-op-overload-mix.txt
209-op-overload-mix.ck:14:15: error: class 'Foo' has no member 'num'
[14] { return !foo.num; }
                   ^
209-op-overload-mix.ck: ...in function 'int @operator~( Foo foo )'
